--- a/src/features/sequencer/PianoKeyboard.sass
+++ b/src/features/sequencer/PianoKeyboard.sass
@@ -34,7 +34,7 @@ $white-key-spacing: 1px
 
   .white-keys
     display: flex
-    z-index: 19
+    z-index: 119
     color: #999
     .key
       flex-shrink: 0
@@ -55,7 +55,7 @@ $white-key-spacing: 1px
   .black-keys
     display: flex
     position: absolute
-    z-index: 20
+    z-index: 120
     .key
       box-sizing: border-box
       width: $b 
