--- a/src/features/sequencer/PitchInput.sass
+++ b/src/features/sequencer/PitchInput.sass
@@ -11,6 +11,7 @@
     overflow: auto
     .PianoKeyboard
       z-index: 100
+      position: relative
       transform-origin: top left 
       right: calc(min(auto, 0px))
       animation: Boing .25s
